--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
   --font-family: "Poppins", sans-serif;
   --text: 16px/175% var(--font-family);
   --text-lg: bold 32px/125% var(--font-family);
-  --text-md: 14px/175% var(--font-family);
+  --text-md: 14px/170% var(--font-family);
   --text-sm: 12px/175% var(--font-family);
 }
 
@@ -71,4 +71,51 @@ nav ul {
 nav ul li:last-child img {
   width: 40px;
   height: 40px;
+}
+
+/********************************** NAV **********************************/
+
+header {
+  padding-block: 32px;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#profile {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+
+#profile > div {
+  max-width: 384px;
+}
+
+#profile h1 {
+  font: var(--text-lg);
+  color: var(--text-color-primary);
+  margin-bottom: 8px;
+}
+
+#profile p {
+  font: var(--text-md);
+}
+
+#info {
+  list-style: none;
+  width: 280px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+#info li {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
